--- a/2-Front-end/1-intro-ao-frontend-e-javascript-assincrono/1-ambiente-de-desenvolvimento/ValidadorDeCampos/package.json
+++ b/2-Front-end/1-intro-ao-frontend-e-javascript-assincrono/1-ambiente-de-desenvolvimento/ValidadorDeCampos/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "vite --open",
     "prod": "vite --build",
-    "linter": "eslint ./src"
+    "linter": "eslint --no-inline-config --no-error-on-unmatched-pattern -c .eslintrc.json . --ext .js"
   },
   "keywords": [],
   "author": "",
