feat: configurando ambiente

--- a/2-Front-end/1-intro-ao-frontend-e-javascript-assincrono/2-javascript-assincrono-promises-e-fetch/fixação/package.json
+++ b/2-Front-end/1-intro-ao-frontend-e-javascript-assincrono/2-javascript-assincrono-promises-e-fetch/fixação/package.json
@@ -1,6 +1,9 @@
 {
-  "name": "js",
+  "name": "MicroBlogs",
   "version": "0.0.0",
   "private": true,
-  "dependencies": {}
+  "dependencies": {
+    "vite": "^4.1.1"
+  },
+  "type": "module"
 }
